<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/profileLogo"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="10"
        android:title="@string/profile_logo_text_courses"
        app:showAsAction="always"/>

    <item
        android:id="@+id/aboutText"
        android:orderInCategory="60"
        android:title="@string/about_text_courses"
        />

    <item
        android:id="@+id/rankText"
        android:orderInCategory="40"
        android:title="@string/rank_Text_courses"
        />
    <item
        android:id="@+id/blogText"
        android:orderInCategory="20"
        android:title="@string/blog_text_course"/>
    <item
        android:id="@+id/tipText"
        android:orderInCategory="50"
        android:title="Tips"/>
    <item
        android:id="@+id/settingText"
        android:orderInCategory="70"
        android:title="@string/settings_text_courses"

        />
    <item
        android:id="@+id/RefreshTextCourses"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="30"
        android:title="Refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/logoutTextCourses"
        android:orderInCategory="80"
        android:title="@string/logout_text_courses"/>



</menu>