<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/AppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/App_title"
            android:textAlignment="center"
            android:textSize="40dp" />

        <TextView
            android:id="@+id/AppSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/App_subtitle"
            android:textAlignment="center"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/loginWelcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:text="@string/login_here_welcome"
            android:textAlignment="center"
            android:textSize="18dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/LoginEmailEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="15dp"
                    android:hint="@string/Login_email_hint"
                    android:inputType="textEmailAddress"
                    android:autofillHints="" />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/LoginPassEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/Login_pass_hint"
                    android:inputType="textPassword"
                    android:autofillHints="" />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/LogInButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/login_button" />
            <TextView
                android:id="@+id/loginForgetPassTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/forget_password_login"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"

                />
            <TextView
                android:id="@+id/signUpReqTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/signUp_Req_Login"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"

                />




        </LinearLayout>
    </ScrollView>
</RelativeLayout>