<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/EditProfileImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:cropToPadding="true"
                android:padding="10dp"
                android:src="@color/colorPrimary"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/rank_profile"
                    android:textSize="15dp"
                    android:textColor="#521663"/>

                <TextView
                    android:id="@+id/profile_rank_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"

                    android:textSize="15dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/score_profile"
                    android:textSize="15dp"
                    android:textColor="#521663"

                    />

                <TextView
                    android:id="@+id/profile_Score_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"

                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_profile"
                    android:textSize="15dp"
                    android:layout_margin="15dp"
                    android:textColor="#0000ff"/>
                <TextView
                    android:id="@+id/profile_name_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_profile"
                android:textSize="15dp"
                android:layout_margin="15dp"
                android:textColor="#0000ff"/>
            <TextView
                android:id="@+id/profile_UserName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:textSize="15dp"
                />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_profile"
                    android:textSize="15dp"
                    android:layout_margin="15dp"
                    android:textColor="#0000ff"/>
                <TextView
                    android:id="@+id/profile_gender_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/institution_profile"
                    android:textSize="15dp"
                    android:layout_margin="15dp"
                    android:textColor="#0000ff"/>
                <TextView
                    android:id="@+id/profile_Institution_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:textSize="15dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/EditProfileReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/edit_your_profile_req"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/LogoutProfileReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/logout_text_courses"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/DeleteProfileReq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/delete_your_account_profile"
                android:textColor="#ff0000"
                android:textSize="20dp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>