<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/time_quiz_activity"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/TimeCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/time_count_quiz_activity"
            android:textSize="25dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linearLayout2"
        android:layout_marginLeft="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/score_quiz_activity"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/ScoreCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/score_count_quiz_activity"
            android:textSize="25dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout3">
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_below="@id/linearLayout3">





        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/QuestionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="23dp" />

            <TextView
                android:id="@+id/QuestionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text=""
                android:textSize="23dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/QuizRadioGroup">

                <RadioButton

                    android:id="@+id/Option1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"

                    android:textSize="23dp"
                    android:textColor="@android:color/black"/>
                <RadioButton
                    android:id="@+id/Option2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"

                    android:textSize="23dp"
                    android:textColor="@android:color/black"/>
                <RadioButton
                    android:id="@+id/Option3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"

                    android:textSize="23dp"
                    android:textColor="@android:color/black"/>
                <RadioButton
                    android:id="@+id/Option4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="20dp"

                    android:textSize="23dp"
                    android:textColor="@android:color/black"/>

            </RadioGroup>


        </LinearLayout>



    </LinearLayout>
    </ScrollView>
</RelativeLayout>
